3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/monster.c: make monsters use the same 'say' format than players.
Nicolas Weeger 2007-04-12

Remove '_speak' hook and related functions. '_say' exists, and is the same.
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-12

Plugin API changes. More void* conversion removing.
 plugins/cfanim/cfanim.c
 plugins/cflogger/cflogger.c
 plugins/cfnewspaper/cfnewspaper.c
 plugins/cfpython/cfpython.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/template/plugin_template.c
 server/plugins.c
Nicolas Weeger 2007-04-12

server/init.c: add -conf documentation to help.
Nicolas Weeger 2007-04-12

server/skill_util.c: In init_skill() do not crash for SKILL objects having
   incorrect subtype.
Andreas Kirschbaum 2007-04-11

Fix bug #1696810: skill items autoapply. Now skilltool will be used even if
skill can be used without, to benefit from its bonuses.
 server/skill_util.c
Nicolas Weeger 2007-04-10

Fix parameter for Doxygen, no functional change.
 plugins/common/plugin_common.c
 plugins/common/include/plugin_common.h
Nicolas Weeger 2007-04-09

More API changes.
 server/plugins.c
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-09

More API changes.
 server/plugins.c
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-09

More API changes.